[gd_scene load_steps=9 format=3 uid="uid://b6ok1e22srahk"]

[ext_resource type="Texture2D" uid="uid://brwg2msmtnh5u" path="res://Objects/AlienSpawner/Tile1.png" id="1_f4547"]
[ext_resource type="Script" uid="uid://dh2hlyteqom2j" path="res://Objects/AlienSpawner/pink_tank.gd" id="1_hpde4"]
[ext_resource type="Texture2D" uid="uid://cqwrbkj2g4oi2" path="res://Objects/AlienSpawner/Tile2.png" id="2_hpde4"]
[ext_resource type="Texture2D" uid="uid://qq5pep68k0tf" path="res://Objects/AlienSpawner/PinkManaTexture2.png" id="4_7uw2l"]
[ext_resource type="Texture2D" uid="uid://d1d8rg2uaria1" path="res://Objects/AlienSpawner/PinkManaTexture1.png" id="5_bfmhe"]
[ext_resource type="AudioStream" uid="uid://djjo317r3exqw" path="res://SFX/AlienSpawnMerge/380390__cribbler__toon-splat.wav" id="6_bfmhe"]

[sub_resource type="CircleShape2D" id="CircleShape2D_f4547"]
radius = 43.104523

[sub_resource type="SpriteFrames" id="SpriteFrames_qjwrp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_f4547")
}],
"loop": false,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_hpde4")
}, {
"duration": 1.0,
"texture": ExtResource("1_f4547")
}],
"loop": false,
"name": &"Push",
"speed": 5.0
}]

[node name="PinkTank" type="Area2D" groups=["Spawner"]]
z_index = 2
script = ExtResource("1_hpde4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_f4547")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
offset_left = -28.0
offset_top = -28.0
offset_right = 52.0
offset_bottom = 52.0
max_value = 1000.0
value = 800.0
fill_mode = 3
texture_under = ExtResource("4_7uw2l")
texture_progress = ExtResource("5_bfmhe")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qjwrp")
animation = &"Idle"
autoplay = "Idle"

[node name="AlineSpawnCooldown" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0.023529412)
offset_left = -36.0
offset_top = -36.0
offset_right = 36.0
offset_bottom = 36.0

[node name="SpawnAlienPos" type="Marker2D" parent="."]
position = Vector2(-40, 20)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_bfmhe")
bus = &"Sounds"

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="AlineSpawnCooldown" to="." method="_on_aline_spawn_cooldown_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
